--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Great+Vibes|Italianno|Lemonada:400,500|Source+Sans+Pro:400,600&display=swap');
+
 * {
    /* box-sizing: border-box; */
-    font-family: 'Slabo 27px', serif;
+    font-family: 'Source Sans Pro', sans-serif;
     padding: 0;
     margin: 0;
-    background-color: white;
+    background-color: #fffdff;
+}
+
+body {
+    
 }
 
 header {
@@ -13,6 +19,10 @@ header {
     padding: 5px 10px;   
     background-color: #fffdf9;
     border-bottom: 2px solid #ffe3ed;
+    border-radius: 2px;
+    width: 90%;
+    margin: auto;
+
 }
 
 img {
@@ -30,22 +40,25 @@ img {
 
 .nav-links li {
     display: inline-block;
-    padding: 0 40px;
+    padding: 0 50px;
 }
 
-nav li {background-color: #fffdf9;}
+nav li::before {
+    background-color: #dbb66d;
+}
 
 
 .nav-links li a {
     transition: all 0.3 ease 1s;
-    color: #8ac6d1;
+    color: #1d9cb3;
     text-decoration: none;
     font-size: 25px;
 }
 
 .nav-links li a:hover {
     transition: all 0.3 ease 1s;
-    color: grey;
+    color: rgb(116, 116, 116);
+    font-size: 27px;
 }
 
 .navbar-left {
@@ -68,27 +81,49 @@ nav li {background-color: #fffdf9;}
     justify-content: center;
     align-items: center;
     flex-flow: column;
+    filter: blur(6px);
+    -webkit-filter: blur(6px);
+    border-radius: 2px;
+    
 }
 
-.banner h1 {
-    font-size: 50px;
-    font-weight: 700;
+.banner-text {
+    background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+  color: white;
+  font-weight: bold;
+  border: 1px solid #ffe3ed;
+  border-radius: 30px;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 80%;
+  padding: 20px;
+  text-align: center;
+
+}
+
+.banner-text h1 {
+    font-size: 100px;
+    font-weight: 500;
     margin-bottom: 10px;
-    
+    font-family: 'Italianno' , cursive;
     text-align: center;
-    letter-spacing: 5px;
-    color: #fffdf9;
+    color: #F9B936;
     background-color: transparent;
   }
 
-.banner h5 {
-    font-size: 30px;
-    font-weight: 400;
+.banner-text h5 {
+    font-size: 40px;
+    font-weight: 300;
     margin-bottom: 10px;
-    
+    font-family: 'Great Vibes', cursive;
     text-align: center;
-    letter-spacing: 3px;
-    color: #fffdf9;
+    
+    color: #ffe3ed;
     background-color: transparent;
 }
 
