--- a/css/style.css
+++ b/css/style.css
@@ -9,19 +9,23 @@
 }
 
 body {
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
+    flex-wrap: nowrap;
     padding: 5px 10px;   
     background-color: #fffdf9;
     border-bottom: 2px solid #ffe3ed;
     border-radius: 2px;
     width: 90%;
     margin: auto;
+    height: auto;
 
 }
 
@@ -36,15 +40,15 @@ img {
 
 .nav-links {
     list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .nav-links li {
-    display: inline-block;
-    padding: 0 50px;
-}
-
-nav li::before {
-    background-color: #dbb66d;
+  padding: 4%;
 }
 
 
@@ -67,6 +71,21 @@ nav li::before {
 
 .navbar-right {
     order: 3;
+}
+/* Burger menu toggle*/
+.burger div {
+    width: 25px;
+    height: 3px;
+    background-color: #1d9cb3;
+    margin: 5px;
+}
+
+.burger {
+    display: none;
+}
+
+@media screen and (max-width:960px) {
+    
 }
 
 .banner {
@@ -122,8 +141,50 @@ nav li::before {
     margin-bottom: 10px;
     font-family: 'Great Vibes', cursive;
     text-align: center;
-    
     color: #ffe3ed;
     background-color: transparent;
 }
 
+
+.welcome-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+    background-color: #fffdf9;
+    margin: auto;
+
+    padding: 4%;
+    
+}
+
+.welcome-container > h1{
+    font-size: 50px;
+    color: rgb(75, 74, 74);
+    padding: 20px 0;
+}
+
+.welcome-container > p{
+    font-size: 20px;
+    color: rgb(116, 116, 116);
+    line-height: 1.45em;
+    text-justify: inter-character;
+    padding: 30px 0;
+
+}
+
+#welcome-images-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+
+#welcome-images-container img{
+    width: 300px;
+    height: 300px;
+    border-radius: 30px;
+}
